--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.6",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/eslint-plugin": "1.1.20",
+    "@vitest/eslint-plugin": "^1.1.20",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
@@ -35,7 +36,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
