--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
+    "flag-icons": "^7.2.3",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
