--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
